added in some helpful comments, and changed deployment target

--- a/PikMap/Info.plist
+++ b/PikMap/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Mind if I use your location? The app is way more fun if I can!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Mind if I have access to your photos? It's only to post them!</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -31,8 +35,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -41,9 +44,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Mind if I use your location? The app is way more fun if I can!</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Mind if I have access to your photos? It&apos;s only to post them!</string>
 </dict>
 </plist>
